forth/test/fail/test_switch_arity_no_default.af
\ Requires `lang.af`.

fun: test_switch_arity_no_default_fail { val -- out }
  val switch
    10 case 100 end
  end
end
